<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp">


    <TextView
        android:id="@+id/vendorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="@string/vendor_name"
        android:padding="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/serviceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_of_service"
        android:padding="5dp"
        android:textSize="21sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/vendorName"
        app:layout_constraintTop_toBottomOf="@+id/vendorName"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/blueDotIndicator"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/read_status"
        android:src="@drawable/blue_dot"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/showInvoiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/show_invoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
