<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="7dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:rippleColor="@color/soft_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_white"
        android:padding="9dp">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:hint="@string/hint_name_of_event"
            android:maxWidth="150dp"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventName"
            android:layout_marginStart="5dp"
            android:hint="@string/date_ddmmyy_placeholder"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventDate"
            android:layout_alignStart="@+id/eventDate"
            android:ellipsize="end"
            android:hint="@string/hint_description_of_event"
            android:maxWidth="500dp"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />


    </RelativeLayout>
</merge>